# Historical-Arabic-Lemmatizer

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  embed_texts.py  pyproject.toml  requirements.txt
docs/: index.html
scripts/: check_dependencies.py  metadata_extractor.py  setup_camel.py
src/lemmatizer/: config.py
src/lemmatizer/analysis/: forms_stats.py
src/lemmatizer/core/: llm_lemmatizer.py  model.py
src/lemmatizer/pipeline/: parallel.py  unified.py
src/lemmatizer/processing/: camel_db.py  camel_fast.py  llm_corpus.py  llm_resolve.py
src/lemmatizer/training/: advanced.py
src/lemmatizer/utils/: embed_texts.py
src/lemmatizer/validation/: lemmatization.py  spread.py
src/lemmatizer/web/: app.py
